aggiornamenti dopo consigli matilda

--- a/app/src/main/res/layout/activity_signupinfopage.xml
+++ b/app/src/main/res/layout/activity_signupinfopage.xml
@@ -96,7 +96,7 @@
         android:backgroundTint="@color/black"
         android:drawableEnd="@drawable/grams_image"
         android:ems="10"
-        android:hint="carbs goal"
+        android:hint="Daily carbs goal"
         android:inputType="number"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
@@ -113,7 +113,7 @@
         android:backgroundTint="@color/black"
         android:drawableEnd="@drawable/grams_image"
         android:ems="10"
-        android:hint="proteins goal"
+        android:hint="Daily proteins goal"
         android:inputType="number"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
@@ -130,7 +130,7 @@
         android:backgroundTint="@color/black"
         android:drawableEnd="@drawable/grams_image"
         android:ems="10"
-        android:hint="fats goal"
+        android:hint="Daily fats goal"
         android:inputType="number"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
@@ -146,7 +146,7 @@
         android:layout_marginTop="8dp"
         android:backgroundTint="@color/black"
         android:ems="10"
-        android:hint="calories goal"
+        android:hint="Daily calories goal"
         android:inputType="number"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
