--- a/app/src/main/res/layout/my_row_exercise.xml
+++ b/app/src/main/res/layout/my_row_exercise.xml
@@ -14,15 +14,15 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
             android:background="@color/white"
-            android:padding="12dp">
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp">
 
             <TextView
                 android:id="@+id/exercise_category"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:text="category"
                 android:textColor="@color/black"
@@ -35,7 +35,7 @@
                 android:id="@+id/exercise_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="4dp"
                 android:text="food"
                 android:textColor="@color/black"
@@ -93,19 +93,24 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="4dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/modify_workout_img"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.083"
                 app:srcCompat="@drawable/ic_baseline_delete_24" />
 
             <ImageView
                 android:id="@+id/modify_workout_img"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:layout_marginStart="260dp"
-                android:layout_marginTop="4dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.84"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.055"
                 app:srcCompat="@drawable/ic_baseline_create_24" />
 
             <ImageView
@@ -113,8 +118,11 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.023"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.75"
                 app:srcCompat="@drawable/no_image2" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
