--- a/app/src/main/res/layout/row_food_dialog.xml
+++ b/app/src/main/res/layout/row_food_dialog.xml
@@ -71,6 +71,22 @@
                 app:layout_constraintVertical_bias="1.0" />
 
             <EditText
+                android:id="@+id/dialog_quantity3_txt"
+                android:layout_width="80dp"
+                android:layout_height="41dp"
+                android:layout_marginStart="4dp"
+                android:ems="4"
+                android:hint="set"
+                android:inputType="number"
+                android:textColorHint="#000000"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/food_img_dialog"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="1.0" />
+
+            <EditText
                 android:id="@+id/dialog_quantity2_txt"
                 android:layout_width="80dp"
                 android:layout_height="41dp"
@@ -84,19 +100,6 @@
                 app:layout_constraintStart_toEndOf="@+id/dialog_quantity_txt"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="1.0" />
-
-            <CheckBox
-                android:id="@+id/select_food_dialog"
-                android:layout_width="69dp"
-                android:layout_height="52dp"
-                android:scaleX="2"
-                android:scaleY="2"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.997"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.619" />
 
             <TextView
                 android:id="@+id/grams_text_dialog"
