--- a/app/src/main/res/layout/activity_fitlifepage.xml
+++ b/app/src/main/res/layout/activity_fitlifepage.xml
@@ -7,6 +7,16 @@
     tools:context=".FitlifePage"
     android:background="@drawable/background">
 
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/sign_in_button"
+        android:layout_width="210dp"
+        android:layout_height="60dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fitlife_signup_button"
+        app:layout_constraintVertical_bias="0.107" />
+
     <ImageView
         android:id="@+id/FitLif_logo"
         android:layout_width="134dp"
