--- a/app/src/main/res/layout/activity_updateexercisepage.xml
+++ b/app/src/main/res/layout/activity_updateexercisepage.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UpdateExercisePage">
+    tools:context=".UpdateExercisePage"
+    android:background="@color/white">
 
     <EditText
         android:id="@+id/workout_name_text_update"
@@ -14,6 +15,9 @@
         android:ems="10"
         android:hint="name"
         android:inputType="textPersonName"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
+        android:backgroundTint="@color/green"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,6 +30,7 @@
         android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:theme="@style/ThemeOverlay.AppCompat.Light"
         app:layout_constraintTop_toBottomOf="@+id/workout_name_text_update" />
 
     <EditText
@@ -63,6 +68,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="modify"
+        android:backgroundTint="@color/green"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/exercisedimageview_update" />
